# ilr-absence-calculator

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
src/ilr_absence/: ads.txt  app.py  config.py  engine.py  ui.py
